Added account login

--- a/TravelApp/TravelApp.csproj
+++ b/TravelApp/TravelApp.csproj
@@ -54,4 +54,13 @@
 		<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.7" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="Account\CreateAccountPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Account\LoginPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
